--- a/roles/check_win_updates/tasks/main.yml
+++ b/roles/check_win_updates/tasks/main.yml
@@ -91,15 +91,15 @@
   delegate_to: localhost
   run_once: yes
 
-#- name: Sending an e-mail using the remote machine, not the Ansible controller node
-#  mail:
-#    host: "{{ smtp_server }}"
-#    port: 25
-#    from: ansible@f9c.com.br (AWX Ansible Automation)
-#    to: "{{ to_email_report }}"
-#    subject: Ansible-report Windows Update
-#    body: "The list of required Windows Update for the Windows VMs can be found in the attached file"
-#    attach:
-#     - reports/Consolidated_VMs_Report.html
+- name: Send Email with Report intra-f9c
+  mail:
+    host: "{{ smtp_server }}"
+    port: 25
+    from: AWX Ansible Automation <ansible@f9c.com.br>
+    to: "{{ to_email_report }}"
+    subject: Ansible-report Windows Update
+    body: "The list of required Windows Update for the Windows VMs can be found in the attached file"
+    attach:
+     - reports/Consolidated_VMs_Report.html
 #  delegate_to: localhost
-#  run_once: yes
+  run_once: yes
