--- a/roles/check_win_updates/tasks/main.yml
+++ b/roles/check_win_updates/tasks/main.yml
@@ -101,5 +101,5 @@
     body: "The list of required Windows Update for the Windows VMs can be found in the attached file"
     attach:
      - reports/Consolidated_VMs_Report.html
-#  delegate_to: localhost
+  delegate_to: localhost
   run_once: yes
